--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <form>
                     <label for="cosmos-address">Enter your $ATOM address here: </label>
                     <input id="cosmos-address" type="text" name="cosmos-address" required placeholder="eg. cosmos...">
-                    <button type="submit">Submit</button>
+                    <button id="submit" type="submit">Submit</button>
                 </form>
             </section>
 
