--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
             </section>
 
             <hr>
-            
+
             <section id="portfolio">
                 <h2>Your Portfolio</h2>
-                <table>
+                <table id="portfolio-table">
                     <thead>
                         <tr>
                             <th>Token</th>
+                            <th>Price in USD</th>
                             <th>Amount</th>
-                            <th>Value in USD</th>
+                            <th>Total Value</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -40,11 +41,23 @@
                             <td>ATOM</td>
                             <td>0</td>
                             <td>0</td>
+                            <td>0</td>
+                        </tr>
+                        <tr>
+                            <td>TIA</td>
+                            <td>0</td>
+                            <td>0</td>
+                            <td>0</td>
+                        </tr>
+                        <tr>
+                            <td>OSMO</td>
+                            <td>0</td>
+                            <td>0</td>
+                            <td>0</td>
                         </tr>
                     </tbody>
                 </table>
                 <hr>
-
             </section>
         </main>
         <footer class="">
