--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                     <button id="submit" type="submit">Submit</button>
                 </form>
             </section>
-
             <hr>
-
             <section id="portfolio">
                 <h2>Your Portfolio</h2>
                 <table id="portfolio-table">
@@ -36,26 +34,10 @@
                             <th>Total Value</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>ATOM</td>
-                            <td>0</td>
-                            <td>0</td>
-                            <td>0</td>
-                        </tr>
-                        <tr>
-                            <td>TIA</td>
-                            <td>0</td>
-                            <td>0</td>
-                            <td>0</td>
-                        </tr>
-                        <tr>
-                            <td>OSMO</td>
-                            <td>0</td>
-                            <td>0</td>
-                            <td>0</td>
-                        </tr>
+                    <tbody id="portfolio-body">
                     </tbody>
+                    <tfoot id="portfolio-footer">
+                    </tfoot>
                 </table>
                 <hr>
             </section>
