hide portfolio at the beginning

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </form>
             </section>
             <hr>
-            <section id="portfolio">
+            <section id="portfolio" class="hidden">
                 <h2>Your Portfolio</h2>
                 <table id="portfolio-table">
                     <thead>
