--- a/index.html
+++ b/index.html
@@ -9,16 +9,27 @@
     </head>
     <body>
         <header>
-            <section class="">
+            <section>
                 <h1>Cosmos Portfolio Tracker</h1>
             </section>
             <hr>
         </header>
         <main>
-            <section class="">
+            <section id="save-address">
                 <form>
-                    <label for="cosmos-address">Enter your $ATOM address here: </label>
+                    <label for="cosmos-address">Enter your new $ATOM address here: </label>
                     <input id="cosmos-address" type="text" name="cosmos-address" required placeholder="eg. cosmos...">
+                    <button id="submit" type="submit">Save</button>
+                </form>
+            </section>
+            <hr>
+            <section id="select-address">
+                <form>
+                    <!-- <label for="cosmos-address">Enter your $ATOM address here: </label> -->
+                    <!-- <input id="cosmos-address" type="text" name="cosmos-address" required placeholder="eg. cosmos..."> -->
+                    <label for="address-dropdown">Or, select from addresses below: </label>
+                    <select id="address-dropdown">
+                    </select>
                     <button id="submit" type="submit">Submit</button>
                 </form>
             </section>
