Added Grid UI for large display

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </section>
             <hr>
         </header>
-        <main>
+        <main class="grid-container">
             <section id="save-address">
                 <h2>Enter your new $ATOM address:</h2>
                 <form>
@@ -22,8 +22,8 @@
                     <input id="cosmos-address" type="text" name="cosmos-address" required placeholder="eg. cosmos...">
                     <button id="submit" type="submit">Save</button>
                 </form>
+                <hr>
             </section>
-            <hr>
             <section id="select-address">
                 <h2>Select from addresses below:</h2>
                 <form>
@@ -32,8 +32,8 @@
                     </select>
                     <button id="submit" type="submit">Submit</button>
                 </form>
+                <hr>
             </section>
-            <hr>
             <section id="balance-across-all-accounts">
                 <h2>Balance Across All Accounts in USD</h2>
                 <h3>
@@ -60,8 +60,8 @@
                 <hr>
             </section>
         </main>
-        <footer class="">
-            <section class="">
+        <footer>
+            <section>
                 <p>Built by SCP with Love</p>
             </section>
         </footer>
