Added github and twitter link for reference

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     </head>
     <body>
         <header>
@@ -63,6 +64,11 @@
         <footer>
             <section>
                 <p>Built by SCP with Love</p>
+                <div class="icon-container">
+                    <a href="https://github.com/SCPassion/cosmos-profile-tracker" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://x.com/KaiCryptohk" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+
             </section>
         </footer>
         <script type="module" src="/index.js"></script>
