--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <form>
                     <label for="cosmos-address">New $ATOM address here: </label>
                     <input id="cosmos-address" type="text" name="cosmos-address" required placeholder="eg. cosmos...">
-                    <button id="submit" type="submit">Save</button>
+                    <button id="save-address" type="submit">Save</button>
                 </form>
                 <hr>
             </section>
@@ -31,19 +31,19 @@
                     <label for="address-dropdown">Cosmos Address: </label>
                     <select id="address-dropdown">
                     </select>
-                    <button id="submit" type="submit">Submit</button>
+                    <button id="submit-address" type="submit">Submit</button>
                 </form>
                 <hr>
             </section>
             <section id="balance-across-all-accounts">
-                <h2>Balance Across All Accounts in USD</h2>
+                <h2>Balance Across Saved Accounts in USD</h2>
                 <h3>
                     <span id="total-balance">0.00</span>
                 </h3>
                 <hr>
             </section>
             <section id="portfolio" class="hidden">
-                <h2>Your Portfolio</h2>
+                <h2>Your Selected Portfolio</h2>
                 <table id="portfolio-table">
                     <thead>
                         <tr>
@@ -66,7 +66,7 @@
                 <p>Built by SCP with Love</p>
                 <div class="icon-container">
                     <a href="https://github.com/SCPassion/cosmos-profile-tracker" target="_blank"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://x.com/KaiCryptohk" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://x.com/KaiCryptohk" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                 </div>
 
             </section>
