Started adding menu icon

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     </head>
     <body>
         <header>
-            <section>
+            <section class="flex">
                 <h1>Cosmos Portfolio Tracker</h1>
+                <nav id="nav">
+                    <i class="fa-solid fa-bars"></i>
+                </nav>
             </section>
             <hr>
         </header>
@@ -74,4 +77,11 @@
         </footer>
         <script type="module" src="/index.js"></script>
     </body>
+
+    <!-- <div id="modal" class="">
+        <div id="modal-content">
+            <span id="close-modal">&times;</span>
+            <h2>Your Saved Addresses:</h2>
+        </div>
+    </div> -->
 </html>
