Added modal for displaying the addresses

--- a/index.html
+++ b/index.html
@@ -78,10 +78,16 @@
         <script type="module" src="/index.js"></script>
     </body>
 
-    <!-- <div id="modal" class="">
-        <div id="modal-content">
-            <span id="close-modal">&times;</span>
-            <h2>Your Saved Addresses:</h2>
-        </div>
-    </div> -->
+    <div id="modal" class="hidden">
+            <div class="flex">
+                <div id="modal-title">
+                    <h2>Your Saved Addresses:</h2>
+                </div>
+                <div id="modal-close"><i class="fa-solid fa-x"></i></div>
+            </div>
+            <ul id="address-list">
+                <li>cosmos1...</li>
+                <li>cosmos2...</li>
+            </ul>
+    </div>
 </html>
