--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <section class="flex">
                 <h1>Cosmos Portfolio Tracker</h1>
                 <nav id="nav">
-                    <i class="fa-solid fa-bars"></i>
+                    <i class="fa-solid fa-bars" id="nav-icon"></i>
                 </nav>
             </section>
             <hr>
@@ -83,11 +83,9 @@
                 <div id="modal-title">
                     <h2>Your Saved Addresses:</h2>
                 </div>
-                <div id="modal-close"><i class="fa-solid fa-x"></i></div>
+                <div id="modal-close"><i class="fa-solid fa-x" id="modal-close-icon"></i></div>
             </div>
-            <ul id="address-list">
-                <li>cosmos1...</li>
-                <li>cosmos2...</li>
-            </ul>
+            <ol id="address-list">
+            </ol>
     </div>
 </html>
