Added error handling & show more information for total

--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
                 <hr>
             </section>
             <section id="balance-across-all-accounts">
-                <h2>Balance Across Saved Accounts in USD</h2>
-                <h3>
-                    <span id="total-balance">0.00</span>
-                </h3>
+                <h2>Balance Across Saved Accounts</h2>
+                <div id="total-balance">0.00</div>
                 <hr>
             </section>
             <section id="portfolio" class="hidden">
